service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping-service-svc-11
  namespace: lab-cnb
spec:
  ports:
    - port: 8080
  selector:
    app: shipping-service-11
  type: NodePort
