ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shipping-service-ingress-11
  namespace: lab-cnb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /shipping-service-11
        backend:
          serviceName: shipping-service-svc-11
          servicePort: 8080
